--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
